modification de la home

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,29 @@
 <footer class="footer">
-  <hr>
   <div class="content has-text-centered has-text-weight-bold pt-6 mt-6">
-    <p>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-copyleft v-bottom" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-        <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
-        <path d="M10 9.75a3.016 3.016 0 0 1 4.163 .173a2.993 2.993 0 0 1 0 4.154a3.016 3.016 0 0 1 -4.163 .173" />
-      </svg> 2024 - La Magnétique
-    </p>
+    <div class="columns is-mobile is-multiline is-centered is-vcentered">
+      <div class="column is-8 columns is-mobile is-multiline is-centered is-vcentered mb-4">
+          <p class="column is-3-desktop is-one-third-mobile">Ils nous ont fait confiance</h2>
+          <div class="column is-2-desktop is-one-third-mobile">
+              <div class="image">
+              <img src="/images/la-nef.png" alt="La Nef">
+              </div>
+          </div>
+          <div class="column is-2-desktop is-one-third-mobile">
+            <div class="image">
+            <img src="/images/bordonor.jpg" alt="Bordonor">
+            </div>
+          </div>
+          <div class="column is-one-fifth-desktop is-one-third-mobile">
+            <div class="image">
+            <img src="/images/alpha.jpg" alt="Grand Angoulême L'alpha">
+            </div>
+          </div>
+          <div class="column is-one-fifth-desktop is-one-third-mobile">
+            <div class="image">
+            <img src="/images/chato-do.jpg" alt="Chato'do">
+            </div>
+          </div>
+      </div>
+    </div>
   </div>
 </footer>
