--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,25 +2,42 @@
   <div class="content has-text-centered has-text-weight-bold pt-6 mt-6">
     <div class="columns is-mobile is-multiline is-centered is-vcentered">
       <div class="column is-8 columns is-mobile is-multiline is-centered is-vcentered mb-4">
-          <p class="column is-3-desktop is-one-third-mobile">Ils nous ont fait confiance</h2>
+          <p class="column is-3-desktop is-full-mobile py-1 btn">Ils nous ont fait confiance</h2>
+      </div>
+      <div class="column is-8 columns is-mobile is-multiline is-centered is-vcentered mb-4">
           <div class="column is-2-desktop is-one-third-mobile">
-              <div class="image">
+            <div class="image">
               <img src="/images/la-nef.png" alt="La Nef">
-              </div>
+            </div>
           </div>
           <div class="column is-2-desktop is-one-third-mobile">
             <div class="image">
-            <img src="/images/bordonor.jpg" alt="Bordonor">
+              <img src="/images/bordonor.jpg" alt="Bordonor">
             </div>
           </div>
           <div class="column is-one-fifth-desktop is-one-third-mobile">
             <div class="image">
-            <img src="/images/alpha.jpg" alt="Grand Angoulême L'alpha">
+              <img src="/images/alpha.jpg" alt="Grand Angoulême L'alpha">
             </div>
           </div>
           <div class="column is-one-fifth-desktop is-one-third-mobile">
             <div class="image">
-            <img src="/images/chato-do.jpg" alt="Chato'do">
+              <img src="/images/chato-do.jpg" alt="Chato'do">
+            </div>
+          </div>
+          <div class="column is-one-fifth-desktop is-one-third-mobile">
+            <div class="image">
+              <img src="/images/notre-dame-sevigne.png" alt="École et Collège Notre Dame Sevigné">
+            </div>
+          </div>
+          <div class="column is-one-fifth-desktop is-one-third-mobile">
+            <div class="image">
+              <img src="/images/tempo.png" alt="Tempo Grandir en Musique">
+            </div>
+          </div>
+          <div class="column is-one-fifth-desktop is-one-third-mobile">
+            <div class="image">
+              <img src="/images/centre-animation-bordeaux.svg" alt="Centre d'animation de Bordeaux">
             </div>
           </div>
       </div>
