--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="shortcut icon" type="image/png" href="../assets/img/favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href=".../assets/imgfavicon.png"/>
   <meta charset="UTF-8">
   {% seo %}
   <meta name="viewport" content="width=device-width, initial-scale=1">
