use base_url for assets path

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="shortcut icon" type="image/png" href=".../assets/imgfavicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/assets/img/favicon.png"/>
   <meta charset="UTF-8">
   {% seo %}
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,5 +8,5 @@
   <link rel="stylesheet" href="{{ '/assets/css/bulma.min.css?v=' | append: site.github.build_revision | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <script src="/assets/js/menu.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/menu.js"></script>
 </head>
