--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -38,7 +38,7 @@
           <div class="column is-1-desktop is-0-mobile p-0"></div>
           <div class="column is-4-desktop is-10-mobile p-0">
             <figure class="image">
-              <img src="./assets/img{{page.image}}.png" alt="">
+              <img src="{{ site.baseurl }}/assets/img/{{page.image}}.png" alt="">
             </figure>
           </div>
       </div>
