--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,37 +7,37 @@
       <div class="column is-8 columns is-mobile is-multiline is-centered is-vcentered mb-4">
           <div class="column is-2-desktop is-one-third-mobile">
             <div class="image">
-              <img src="./assets/imgla-nef.png" alt="La Nef">
+              <img src="{{ site.baseurl }}/assets/img/la-nef.png" alt="La Nef">
             </div>
           </div>
           <div class="column is-2-desktop is-one-third-mobile">
             <div class="image">
-              <img src="./assets/imgbordonor.jpg" alt="Bordonor">
+              <img src="{{ site.baseurl }}/assets/img/bordonor.jpg" alt="Bordonor">
             </div>
           </div>
           <div class="column is-one-fifth-desktop is-one-third-mobile">
             <div class="image">
-              <img src="./assets/imgalpha.jpg" alt="Grand Angoulême L'alpha">
+              <img src="{{ site.baseurl }}/assets/img/alpha.jpg" alt="Grand Angoulême L'alpha">
             </div>
           </div>
           <div class="column is-one-fifth-desktop is-one-third-mobile">
             <div class="image">
-              <img src="./assets/imgchato-do.jpg" alt="Chato'do">
+              <img src="{{ site.baseurl }}/assets/img/chato-do.jpg" alt="Chato'do">
             </div>
           </div>
           <div class="column is-one-fifth-desktop is-one-third-mobile">
             <div class="image">
-              <img src="./assets/imgnotre-dame-sevigne.png" alt="École et Collège Notre Dame Sevigné">
+              <img src="{{ site.baseurl }}/assets/img/notre-dame-sevigne.png" alt="École et Collège Notre Dame Sevigné">
             </div>
           </div>
           <div class="column is-one-fifth-desktop is-one-third-mobile">
             <div class="image">
-              <img src="./assets/imgtempo.png" alt="Tempo Grandir en Musique">
+              <img src="{{ site.baseurl }}/assets/img/tempo.png" alt="Tempo Grandir en Musique">
             </div>
           </div>
           <div class="column is-one-fifth-desktop is-one-third-mobile">
             <div class="image">
-              <img src="./assets/imgcentre-animation-bordeaux.svg" alt="Centre d'animation de Bordeaux">
+              <img src="{{ site.baseurl }}/assets/img/centre-animation-bordeaux.svg" alt="Centre d'animation de Bordeaux">
             </div>
           </div>
       </div>
