--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: aileron-regular;
-    src: url(/assets/fonts/Aileron-Regular.otf);
+    src: url(../../fonts/font/Aileron-Regular.otf);
 }
 
 body {
