--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <nav class="navbar is-transparent pt-5 px-5">
     <div class="navbar-brand">
-      <a class="navbar-item" href="{{ site.url }}">
+      <a class="navbar-item" href="{{ site.baseurl }}">
         {% if page.logo %}
         <img src="{{ site.baseurl }}/assets/img/{{ page.logo }}.png" alt="La magnétique">
         {% else %}
