--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@
   <body class="bg-{{ page.background-color }}">
     {% include header.html %}
     <main id="content" role="main" class="has-text-justified">
-      <div class="columns is-mobile is-multiline is-centered mt-5 mb-5 pt-6">
+      <div class="columns is-mobile is-multiline is-centered mt-5 mb-6 px-6">
           <div class="column is-4-desktop is-10-mobile p-0">
             <h1 class="mt-0 mb-6">{{ page.title }}</h1>
             {% if page.intro %}
@@ -25,7 +25,7 @@
               </div>
             {% endif %}
             {% if page.idees %}
-            <div class="mt-2 mb-6">
+            <div class="mt-2 mt-6">
               <p class="my-3"><strong>&#8594; Quelques idées</strong></p>
               <ul>
                 {% for idee in page.idees %}
