add spacing for navbar/footer & style a:hover

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="mb-6">
 
-  <nav class="navbar is-transparent pt-5 px-5">
+  <nav class="navbar is-transparent is-spaced">
     <div class="navbar-brand">
       <a class="navbar-item" href="{{ site.baseurl }}">
         {% if page.logo %}
