--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
     </div>
     <div class="navbar-menu" id="navMenu">
       <div class="navbar-end">
-          <a class="navbar-item is-size-4" href="{{ site.baseurl }}#nos-ateliers">Nos ateliers</a>
+          <a class="navbar-item is-size-4" href="{{ site.baseurl }}#ateliers">Nos ateliers</a>
           <a class="navbar-item is-size-4" href="{{ site.baseurl }}/pages/contact">Contact</a>
       </div>
     </div>
