--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@
     <main id="content" role="main" class="has-text-justified">
       <div class="columns is-mobile is-multiline is-centered mx-6 py-6">
           <div class="column is-4-desktop is-10-mobile p-0">
-            <h1 class="mt-0 mb-6">{{ page.title }}</h1>
+            <h1 class="mt-0 mb-6 has-text-centered is-size-5-mobile">{{ page.title }}</h1>
             {% if page.intro %}
               <div>
                 {% for intro in page.intro %}
@@ -35,7 +35,7 @@
             </div>
           {% endif %}
           </div>
-          <div class="column is-1-desktop is-0-mobile p-0"></div>
+          <div class="column is-1-desktop is-10-mobile p-0 mb-6"></div>
           <div class="column is-4-desktop is-10-mobile p-0">
             <figure class="image">
               <img src="{{ site.baseurl }}/assets/img/{{page.image}}.png" alt="">
@@ -46,7 +46,7 @@
       {% if page.etapes %}
       <div class="column is-9-desktop is-10-mobile columns is-mobile is-multiline p-0 mt-5">
         <div class="column is-6-desktop is-10-mobile">
-          <h2 class="my-3 mx-0">Étapes de l'atelier →</h2>
+          <h2 class="my-3 mx-0 is-size-6-mobile">Étapes de l'atelier →</h2>
         </div>
         <div class="column is-6-desktop is-0-mobile"></div>
         {% for etape in page.etapes %}
@@ -62,7 +62,7 @@
       <div class="column is-9-desktop is-10-mobile columns is-mobile is-multiline is-centered pl-0">
         {% if page.materiel %}
         <div class="column mt-2 is-8-desktop is-10-mobile">
-          <h2 class="my-3 mx-0">Matériel mis à disposition</h2>
+          <h2 class="my-3 mx-0 is-size-6-mobile">Matériel mis à disposition</h2>
           <ul>
             {% for mat in page.materiel %}
             <li class="mb-2">&bull; {{ mat }}</li>
@@ -72,7 +72,7 @@
         {% endif %}
         {% if page.infos %}
         <div class="column mt-2 is-4-desktop is-10-mobile">
-          <h2 class="my-3 mx-0">Infos pratiques</h2>
+          <h2 class="my-3 mx-0 is-size-6-mobile">Infos pratiques</h2>
           {% for info in page.infos %}
           <p class="mb-2"><strong>{{ info[0] }} : </strong>{{ info[1] }}</p>
           {% endfor %}
