fix responsive for tablet & mobile

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer">
   <div class="content has-text-centered has-text-weight-bold pt-6 mt-5">
     <div class="columns is-mobile is-multiline is-centered is-vcentered">
-      <div class="column is-8 columns is-mobile is-multiline is-centered is-vcentered mb-4">
-          <p class="column is-3-desktop is-full-mobile py-1 btn">Ils nous ont fait confiance</h2>
+      <div class="column is-8-desktop is-12-touch is-12-mobile columns is-mobile is-multiline is-centered is-vcentered mb-4">
+          <p class="column is-3-desktop is-6-touch is-full-mobile py-1 btn">Ils nous ont fait confiance</h2>
       </div>
-      <div class="column is-8-desktop is-11-mobile columns is-mobile is-multiline is-centered is-vcentered mb-4">
+      <div class="column is-8-desktop is-11-touch is-11-mobile columns is-mobile is-multiline is-centered is-vcentered mb-4">
           <div class="column is-2-desktop is-one-third-mobile">
             <div class="image">
               <img src="{{ site.baseurl }}/assets/img/la-nef.png" alt="La Nef">
