--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@
     {% include header.html %}
     <main id="content" role="main" class="has-text-justified">
       <div class="columns is-mobile is-multiline is-centered mx-6 py-6">
-          <div class="column is-4-desktop is-10-mobile p-0">
+          <div class="column is-4-desktop is-4-desktop is-12-touch is-12-mobile p-0">
             <h1 class="mt-0 mb-6 has-text-centered is-size-5-mobile">{{ page.title }}</h1>
             {% if page.intro %}
               <div>
@@ -35,8 +35,8 @@
             </div>
           {% endif %}
           </div>
-          <div class="column is-1-desktop is-10-mobile p-0 mb-6"></div>
-          <div class="column is-4-desktop is-10-mobile p-0">
+          <div class="column is-1-desktop is-12-touch is-12-mobile p-0 mb-6"></div>
+          <div class="column is-4-desktop is-8-touch is-12-mobile p-0">
             <figure class="image">
               <img src="{{ site.baseurl }}/assets/img/{{page.image}}.png" alt="">
             </figure>
@@ -44,13 +44,13 @@
       </div>
       <div class="columns is-mobile is-multiline is-centered mb-6">
       {% if page.etapes %}
-      <div class="column is-9-desktop is-10-mobile columns is-mobile is-multiline p-0 mt-5">
-        <div class="column is-6-desktop is-10-mobile">
+      <div class="column is-9-desktop is-12-touch is-12-mobile columns is-mobile is-multiline p-0 mt-5">
+        <div class="column is-6-desktop is-12-touch is-10-mobile">
           <h2 class="my-3 mx-0 is-size-6-mobile">Étapes de l'atelier →</h2>
         </div>
         <div class="column is-6-desktop is-0-mobile"></div>
         {% for etape in page.etapes %}
-        <div class="column is-6-desktop is-10-mobile py-0">
+        <div class="column is-6-desktop is-12-touch is-10-mobile py-0">
           <div class="mt-2">
             <h3>{{ etape[0] }}</h3>
             <p class="mb-2">{{ etape[1] }}</p>
@@ -59,9 +59,9 @@
         {% endfor %}
       </div>
       {% endif %}
-      <div class="column is-9-desktop is-10-mobile columns is-mobile is-multiline is-centered pl-0">
+      <div class="column is-9-desktop is-12-touch is-12-mobile columns is-mobile is-multiline is-centered pl-0">
         {% if page.materiel %}
-        <div class="column mt-2 is-8-desktop is-10-mobile">
+        <div class="column mt-2 is-8-desktop is-10-touch is-10-mobile">
           <h2 class="my-3 mx-0 is-size-6-mobile">Matériel mis à disposition</h2>
           <ul>
             {% for mat in page.materiel %}
@@ -71,7 +71,7 @@
         </div>
         {% endif %}
         {% if page.infos %}
-        <div class="column mt-2 is-4-desktop is-10-mobile">
+        <div class="column mt-2 is-4-desktop is-10-touch is-10-mobile">
           <h2 class="my-3 mx-0 is-size-6-mobile">Infos pratiques</h2>
           {% for info in page.infos %}
           <p class="mb-2"><strong>{{ info[0] }} : </strong>{{ info[1] }}</p>
