fix general style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   {% include head.html %}
   <body class="bg-{{ page.background-color }}">
     {% include header.html %}
-    <main id="content" class="main-content has-text-justified" role="main">
+    <main id="content" class="main-content" role="main">
       {{ content }}
     </main>
     {% include footer.html %}
