--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,9 +3,9 @@
   {% include head.html %}
   <body class="bg-{{ page.background-color }}">
     {% include header.html %}
-    <main id="content" role="main" class="has-text-justified">
-      <div class="columns is-mobile is-multiline is-centered mx-6 py-6">
-          <div class="column is-4-desktop is-4-desktop is-12-touch is-12-mobile p-0">
+    <main id="content" role="main">
+      <div class="columns is-mobile is-multiline is-centered mx-5 py-6">
+          <div class="column is-4-desktop is-10-touch is-12-mobile p-0">
             <h1 class="mt-0 mb-6 has-text-centered is-size-5-mobile">{{ page.title }}</h1>
             {% if page.intro %}
               <div>
@@ -42,11 +42,10 @@
             </figure>
           </div>
       </div>
-      <div class="columns is-mobile is-multiline is-centered mb-6">
+      <div class="columns is-mobile is-multiline is-centered p-0 pb-6 mt-5 mb-6 mx-5">
       {% if page.etapes %}
-      <div class="column is-9-desktop is-12-touch is-12-mobile columns is-mobile is-multiline p-0 mt-5">
-        <div class="column is-6-desktop is-12-touch is-10-mobile">
-          <h2 class="my-3 mx-0 is-size-6-mobile">Étapes de l'atelier →</h2>
+        <div class="column mt-2 is-5-desktop is-5-touch is-12-mobile">
+          <h2 class="mt-3 mb-6 mx-0 is-size-6-mobile">Étapes de l'atelier →</h2>
         </div>
         <div class="column is-6-desktop is-0-mobile"></div>
         {% for etape in page.etapes %}
@@ -57,28 +56,25 @@
           </div>
         </div>
         {% endfor %}
-      </div>
       {% endif %}
-      <div class="column is-9-desktop is-12-touch is-12-mobile columns is-mobile is-multiline is-centered pl-0">
-        {% if page.materiel %}
-        <div class="column mt-2 is-8-desktop is-10-touch is-10-mobile">
-          <h2 class="my-3 mx-0 is-size-6-mobile">Matériel mis à disposition</h2>
+      {% if page.materiel %}
+      <div class="column mt-2 is-5-desktop is-5-touch is-12-mobile is-centered pl-0">
+          <h2 class="mt-3 mb-6 mx-0 is-size-6-mobile">Matériel mis à disposition</h2>
           <ul>
             {% for mat in page.materiel %}
             <li class="mb-2">&bull; {{ mat }}</li>
             {% endfor %}
           </ul>
-        </div>
-        {% endif %}
-        {% if page.infos %}
-        <div class="column mt-2 is-4-desktop is-10-touch is-10-mobile">
-          <h2 class="my-3 mx-0 is-size-6-mobile">Infos pratiques</h2>
-          {% for info in page.infos %}
-          <p class="mb-2"><strong>{{ info[0] }} : </strong>{{ info[1] }}</p>
-          {% endfor %}
-        </div>
-        {% endif %}
       </div>
+      {% endif %}
+      {% if page.infos %}
+      <div class="column mt-2 is-4-desktop is-5-touch is-12-mobile">
+        <h2 class="mt-3 mb-6 mx-0 is-size-6-mobile">Infos pratiques</h2>
+        {% for info in page.infos %}
+        <p class="mb-2"><strong>{{ info[0] }} : </strong>{{ info[1] }}</p>
+        {% endfor %}
+      </div>
+      {% endif %}
       </div>
     </main>
     {% include footer.html %}
