--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,6 +188,12 @@ footer {
     border-radius: 4rem;
 }
 
+.btn-aquablue {
+    border: solid 1px;
+    border-radius: 4rem;
+    padding: 0.8rem 1.5rem;
+}
+
 .card {
     border-radius: 3rem !important;
 }
