fix card border radius on hover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,7 +195,9 @@ footer {
 }
 
 .card {
-    border-radius: 3rem !important;
+    border-radius: 2rem !important;
+    background-color: inherit;
+    box-shadow: none;
 }
 
 .card-content {
