fix style mobile menu & contact cta

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,6 +159,11 @@ a.navbar-item:hover {
     color: #224d52c2 !important;
 }
 
+.navbar-menu {
+    background-color: inherit;
+    box-shadow: none;
+}
+
 strong {
     color: inherit;
 }
