add index follow

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,10 @@
 <head>
-  <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/assets/img/favicon.png"/>
   <meta charset="UTF-8">
-  {% seo %}
+  <title>{{ page.title }} | La magnétique</title>
+  <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/assets/img/favicon.png"/>
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="{{ page.title }} | La magnétique" />
+  <meta property="og:description" content="{{ page.og-description }}" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#157878">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
