--- a/_includes/header-with-hero.html
+++ b/_includes/header-with-hero.html
@@ -3,7 +3,7 @@
 
     <nav class="navbar is-transparent is-spaced">
       <div class="navbar-brand">
-        <a class="navbar-item" href="{{ site.baseurl }}">
+        <a class="navbar-item" href="lamagnetique.fr">
           {% if page.logo %}
           <img src="{{ site.baseurl }}/assets/img/{{ page.logo }}.png" alt="La magnétique">
           {% else %}
@@ -19,7 +19,7 @@
       <div class="navbar-menu" id="navMenu">
         <div class="navbar-end">
           <a class="navbar-item is-size-4" href="{{ site.baseurl }}/pages/a-propos">À propos</a>
-          <a class="navbar-item is-size-4" href="{{ site.baseurl }}#ateliers">Nos ateliers</a>
+          <a class="navbar-item is-size-4" href="https://lamagnetique.fr/#ateliers">Nos ateliers</a>
           <a class="navbar-item is-size-4" href="{{ site.baseurl }}/pages/contact">Contact</a>
         </div>
       </div>
