fix bis link to #ateliers and home from pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <nav class="navbar is-transparent is-spaced">
     <div class="navbar-brand">
-      <a class="navbar-item" href="lamagnetique.fr">
+      <a class="navbar-item" href="{{ site.baseurl }}/">
         {% if page.logo %}
         <img src="{{ site.baseurl }}/assets/img/{{ page.logo }}.png" alt="La magnétique">
         {% else %}
@@ -18,7 +18,7 @@
     <div class="navbar-menu" id="navMenu">
       <div class="navbar-end">
         <a class="navbar-item is-size-4" href="{{ site.baseurl }}/pages/a-propos">À propos</a>
-        <a class="navbar-item is-size-4" href="https://lamagnetique.fr/#ateliers">Nos ateliers</a>
+        <a class="navbar-item is-size-4" href="{{ site.baseurl }}/#ateliers">Nos ateliers</a>
         <a class="navbar-item is-size-4" href="{{ site.baseurl }}/pages/contact">Contact</a>
       </div>
     </div>
