add meta description to head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="{{ page.title }} | La magnétique" />
   <meta property="og:description" content="{{ page.og-description }}" />
+  <meta name="description" content="{{ page.og-description }}" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#157878">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
