change meta title order

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,9 @@
 <head>
   <meta charset="UTF-8">
-  <title>{{ page.title }} | La magnétique</title>
+  <title>La magnétique | {{ page.title }}</title>
   <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/assets/img/favicon.png"/>
   <meta name="robots" content="index, follow">
-  <meta property="og:title" content="{{ page.title }} | La magnétique" />
+  <meta property="og:title" content="La magnétique | {{ page.title }}" />
   <meta property="og:description" content="{{ page.og-description }}" />
   <meta name="description" content="{{ page.og-description }}" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
