add partners links in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,37 +7,51 @@
       <div class="column is-8-desktop is-11-touch is-11-mobile columns is-mobile is-multiline is-centered is-vcentered mb-4">
           <div class="column is-2-desktop is-one-third-mobile">
             <div class="image">
-              <img src="{{ site.baseurl }}/assets/img/la-nef.png" alt="La Nef">
+              <a href="https://www.lanef-musiques.com/" target="_blank" rel="noopener" title="Site Internet de La Nef">
+                <img src="{{ site.baseurl }}/assets/img/la-nef.png" alt="La Nef">
+              </a>
             </div>
           </div>
           <div class="column is-2-desktop is-one-third-mobile">
             <div class="image">
-              <img src="{{ site.baseurl }}/assets/img/bordonor.jpg" alt="Bordonor">
+              <a href="https://www.bordonor.org/" target="_blank" rel="noopener" title="Site Internet de Bordonor">
+                <img src="{{ site.baseurl }}/assets/img/bordonor.jpg" alt="Bordonor">
+              </a>
             </div>
           </div>
           <div class="column is-one-fifth-desktop is-one-third-mobile">
             <div class="image">
-              <img src="{{ site.baseurl }}/assets/img/alpha.jpg" alt="Grand Angoulême L'alpha">
+              <a href="https://www.lalpha.org/" target="_blank" rel="noopener" title="Site Internet de L'alpha">
+                <img src="{{ site.baseurl }}/assets/img/alpha.jpg" alt="Grand Angoulême L'alpha">
+              </a>
             </div>
           </div>
           <div class="column is-one-fifth-desktop is-one-third-mobile">
             <div class="image">
-              <img src="{{ site.baseurl }}/assets/img/chato-do.jpg" alt="Chato'do">
+              <a href="https://chatodo.com/" target="_blank" rel="noopener" title="Site Internet du Chato'do">
+                <img src="{{ site.baseurl }}/assets/img/chato-do.jpg" alt="Chato'do">
+              </a>
             </div>
           </div>
           <div class="column is-one-fifth-desktop is-one-third-mobile">
             <div class="image">
-              <img src="{{ site.baseurl }}/assets/img/notre-dame-sevigne.png" alt="École et Collège Notre Dame Sevigné">
+              <a href="https://www.notredamesevigne.com/" target="_blank" rel="noopener" title="Site Internet de l'école et Collège Notre Dame Sevigné">
+                <img src="{{ site.baseurl }}/assets/img/notre-dame-sevigne.png" alt="École et Collège Notre Dame Sevigné">
+              </a>
             </div>
           </div>
           <div class="column is-one-fifth-desktop is-one-third-mobile">
             <div class="image">
-              <img src="{{ site.baseurl }}/assets/img/tempo.png" alt="Tempo Grandir en Musique">
+              <a href="https://www.tempo-musique.fr/" target="_blank" rel="noopener" title="Site Internet de Tempo musique">
+                <img src="{{ site.baseurl }}/assets/img/tempo.png" alt="Tempo Grandir en Musique">
+              </a>
             </div>
           </div>
           <div class="column is-one-fifth-desktop is-one-third-mobile">
             <div class="image">
-              <img src="{{ site.baseurl }}/assets/img/centre-animation-bordeaux.svg" alt="Centre d'animation de Bordeaux">
+              <a href="https://centresanimationbordeaux.fr/" target="_blank" rel="noopener" title="Site Internet du Centre d'animation de Bordeaux">
+                <img src="{{ site.baseurl }}/assets/img/centre-animation-bordeaux.svg" alt="Centre d'animation de Bordeaux">
+              </a>
             </div>
           </div>
       </div>
