convert favicon path to absolute

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="UTF-8">
   <title>{{ page.title }} | La magnétique </title>
-  <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/assets/img/favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="https://lamagnetique.fr/assets/img/favicon.png"/>
   <meta name="robots" content="index, follow">
   <meta name="description" content="{{ page.og-description }}" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
